--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
     image: nginx:stable-alpine
     restart: always
     ports:
-        - 36627:80
-        - 43695:443
+        - 80:80
+        - 443:443
     volumes:
       - ./nginx-conf:/etc/nginx/conf.d
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+      - static_files:/app/todoapp/staticfiles
     depends_on: 
         - backend
   backend:
@@ -21,11 +22,13 @@ services:
         - db
     env_file: 
       - ./.env
+    volumes: 
+      - static_files:/app/todoapp/staticfiles
   db:
     image: postgres
     restart: always
     volumes: 
-    - /workspace/data:/var/lib/postgresql/data/pgdata
+    - /home/ubuntu/data:/var/lib/postgresql/data/pgdata
     environment:
       POSTGRES_PASSWORD: secretpassword
       PGDATA: /var/lib/postgresql/data/pgdata
@@ -37,3 +40,6 @@ services:
         - ./certbot/conf:/etc/letsencrypt
         - ./certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"      
+
+volumes:
+  static_files: {}
