--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -1,20 +1,40 @@
 server {
     listen 80;
-    server_name _;
+    server_name devops.aurigastore.com;
     server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name devops.aurigastore.com;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/devops.aurigastore.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/devops.aurigastore.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
     client_max_body_size 20M;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ http://backend:8000;
+        # root   /usr/share/nginx/html;
+        # index  index.html index.htm;
+        try_files $uri $uri/  @proxy_api; # /index.html;
     }
 
-    location /api {
-        proxy_pass http://backend:8000;
+    location /todos {
+        try_files $uri @proxy_api;
     }
     location /admin {
-        proxy_pass http://backend:8000;
+        try_files $uri @proxy_api;
     }
 
     location @proxy_api {
@@ -26,8 +46,8 @@ server {
         proxy_pass   http://backend:8000;
     }
 
-    location /django_static/ {
+    location /static/ {
         autoindex on;
-        alias /app/todoapp/django_static/;
+        alias /app/todoapp/staticfiles/;
     }
 }
