--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,14 @@
 version: "3.9"
 services:
   nginx: 
-    image: nginx:stable-alpine
+    image: rajneeshmehta93/nginx-todo:github-NO-SSL
     restart: always
     ports:
-        - 80:80
-        - 443:443
+        - 37831:80
+        - 47831:443
     volumes:
-      - ./nginx-conf:/etc/nginx/conf.d
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+      - certbot_conf:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
       - static_files:/app/todoapp/staticfiles
     depends_on: 
         - backend
@@ -28,7 +27,7 @@ services:
     image: postgres
     restart: always
     volumes: 
-    - /home/ubuntu/data:/var/lib/postgresql/data/pgdata
+    - pg_data:/var/lib/postgresql/data/pgdata
     environment:
       POSTGRES_PASSWORD: secretpassword
       PGDATA: /var/lib/postgresql/data/pgdata
@@ -37,9 +36,12 @@ services:
     image: certbot/certbot:latest
     restart: unless-stopped
     volumes:
-        - ./certbot/conf:/etc/letsencrypt
-        - ./certbot/www:/var/www/certbot
+        - certbot_conf:/etc/letsencrypt
+        - certbot_www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"      
 
 volumes:
   static_files: {}
+  pg_data: {}
+  certbot_conf: {}
+  certbot_www: {}
